--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         /* Add some basic styling to the page */
         body {
             font-family: Arial, sans-serif;
+            font-size: 2em;
         }
         .container {
-            max-width: 400px;
+            width: 100%;
+            max-width: 900px;
             margin: 0 auto;
             padding: 20px;
             text-align: center;
@@ -22,6 +24,7 @@
             width: 100%;
             padding: 10px;
             margin-top: 10px;
+            font-size: 25px;
         }
         button {
             padding: 10px 20px;
@@ -30,6 +33,7 @@
             color: #fff;
             border: none;
             cursor: pointer;
+            font-size: 30px;
         }
         #result {
             margin-top: 10px;
