--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="result"></div>
         <div id="score"></div>
         <button id="startAgainBtn" onclick="startAgain()" style="display:none;">Start again</button>
-        <textarea style="width: 100%; height: 300px; font-size: 25px;"></textarea>
+        <textarea style="width: 100%; height: 300px; font-size: 25px;" placeholder="you can take notes here"></textarea>
     </div>
     <script>
         let num1, num2;
